# E92-Pulse

./: .gitignore  LICENSE  README.md  diagnose_cable.py  pyproject.toml
docs/: datapacks.md  example-datapack.yaml  linux-permissions.md
src/e92_pulse/: __init__.py  __main__.py  app.py
src/e92_pulse/bmw/: __init__.py  module_registry.py  module_scan.py  services.py
src/e92_pulse/core/: __init__.py  app_logging.py  config.py  connection.py  discovery.py  safety.py  vehicle.py
src/e92_pulse/gui/: __init__.py  main_window.py
src/e92_pulse/gui/pages/: __init__.py  connect_page.py  export_page.py  fault_memory_page.py  quick_test_page.py  services_page.py
src/e92_pulse/gui/widgets/: __init__.py
src/e92_pulse/gui/wizards/: __init__.py
src/e92_pulse/plugins/: __init__.py  base.py  loader.py
src/e92_pulse/protocols/: __init__.py  services.py  uds_client.py
src/e92_pulse/sim/: __init__.py  mock_ecus.py
src/e92_pulse/transport/: __init__.py  base.py  can_transport.py  mock_transport.py  serial_link.py
tests/: __init__.py  conftest.py  test_battery_registration.py  test_discovery.py  test_logging.py  test_mock_ecus.py  test_safety.py
