[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "e92-pulse"
version = "1.0.0"
description = "BMW E92 M3 Diagnostic Tool - Plug and Play"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"

dependencies = [
    "PyQt6>=6.4.0",
    "python-can>=4.0.0",
]

[project.scripts]
e92-pulse = "e92_pulse.app:main"

[tool.setuptools.packages.find]
where = ["src"]
